--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "php": "^8.2",
         "arafat69/laravel-repository": "^2.0",
         "laravel/framework": "^12.0",
-        "laravel/tinker": "^2.10.1"
+        "laravel/tinker": "^2.10.1",
+        "spatie/laravel-permission": "^6.24"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
@@ -80,6 +81,13 @@
         "optimize-autoloader": true,
         "preferred-install": "dist",
         "sort-packages": true,
+        "audit": {
+            "ignore": [
+                "PKSA-z3gr-8qht-p93v",
+                "PKSA-365x-2zjk-pt47",
+                "PKSA-4s4z-t146-6123"
+            ]
+        },
         "allow-plugins": {
             "pestphp/pest-plugin": true,
             "php-http/discovery": true
